--- a/configure.ac
+++ b/configure.ac
@@ -21,11 +21,11 @@ AC_SUBST(ACLOCAL_AMFLAGS, "-I m4 -I .")
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([gio/giomodule.c])
 
-AC_DEFINE(PYGIO_MAJOR_VERSION, pygio_major_version, [PyGtk major version])
+AC_DEFINE(PYGIO_MAJOR_VERSION, pygio_major_version, [pygio major version])
 AC_SUBST(PYGIO_MAJOR_VERSION, pygio_major_version)
-AC_DEFINE(PYGIO_MINOR_VERSION, pygio_minor_version, [PyGtk minor version])
+AC_DEFINE(PYGIO_MINOR_VERSION, pygio_minor_version, [pygio minor version])
 AC_SUBST(PYGIO_MINOR_VERSION, pygio_minor_version)
-AC_DEFINE(PYGIO_MICRO_VERSION, pygio_micro_version, [PyGtk micro version])
+AC_DEFINE(PYGIO_MICRO_VERSION, pygio_micro_version, [pygio micro version])
 AC_SUBST(PYGIO_MICRO_VERSION, pygio_micro_version)
 
 AM_CONFIG_HEADER(config.h)
