--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -68,7 +68,7 @@ EXTRA_DIST += $(GIO_DEFS) $(GIO_OVERRIDES)
 gio.c: $(GIO_DEFS) $(GIO_OVERRIDES)
 _gio_la_CFLAGS = $(GIO_CFLAGS)
 _gio_la_LDFLAGS = $(common_ldflags) -export-symbols-regex init_gio
-_gio_la_LIBADD = $(GIO_LIBS) -lpyglib-2.0-python
+_gio_la_LIBADD = $(GIO_LIBS) -lpyglib-2.0-@PYTHON_BASENAME@
 _gio_la_SOURCES = \
 	giomodule.c \
 	pygio-utils.c \
